--- a/machine_translation.ipynb
+++ b/machine_translation.ipynb
@@ -1,18 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
@@ -42,15 +28,20 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "#readind the data\n"
-      ],
       "metadata": {
         "id": "O5pUP30Me3Z2"
-      }
+      },
+      "source": [
+        "#readind the data\n"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {
+        "id": "-N1zkY1ouOe0"
+      },
+      "outputs": [],
       "source": [
         "def read_data(file_name):\n",
         "  data=[]\n",
@@ -65,24 +56,24 @@
         "        zip([0] + idx_list, idx_list + \n",
         "        ([size] if idx_list[-1] != size else []))]\n",
         "  return res\n"
-      ],
-      "metadata": {
-        "id": "-N1zkY1ouOe0"
-      },
-      "execution_count": 2,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "#Finding the maximum length of the input sequence\n"
-      ],
       "metadata": {
         "id": "PLyizZxme6YW"
-      }
+      },
+      "source": [
+        "#Finding the maximum length of the input sequence\n"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {
+        "id": "N-FXduYmM75q"
+      },
+      "outputs": [],
       "source": [
         "def find_max_len(data_set):\n",
         "  list_length=0\n",
@@ -91,58 +82,51 @@
         "    if list_length < len(i):\n",
         "      list_length = len(i)\n",
         "  return list_length\n"
-      ],
-      "metadata": {
-        "id": "N-FXduYmM75q"
-      },
-      "execution_count": 3,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "#read source data\n"
-      ],
       "metadata": {
         "id": "XSP9ZfH0fFTe"
-      }
+      },
+      "source": [
+        "#read source data\n"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "source_data=read_data(\"train-source.txt\")"
-      ],
+      "execution_count": 4,
       "metadata": {
         "id": "sRIARsLkvaqp"
       },
-      "execution_count": 4,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "source_data=read_data(\"train-source.txt\")"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "#Find the maximum sequence in source data\n"
-      ],
       "metadata": {
         "id": "-n6wvgWwfIv_"
-      }
+      },
+      "source": [
+        "#Find the maximum sequence in source data\n"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "max_value_source_data=find_max_len(source_data)"
-      ],
+      "execution_count": 5,
       "metadata": {
         "id": "pbjEB_4-Nby1"
       },
-      "execution_count": 5,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "max_value_source_data=find_max_len(source_data)"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "max_value_source_data"
-      ],
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -150,65 +134,65 @@
         "id": "ZxzsMoBJNomO",
         "outputId": "447e5df4-1a7f-4322-9da4-430d0ec38e6b"
       },
-      "execution_count": 6,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "233"
             ]
           },
+          "execution_count": 6,
           "metadata": {},
-          "execution_count": 6
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "max_value_source_data"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "#read the target data"
-      ],
       "metadata": {
         "id": "Zbk4a7q0fQvM"
-      }
+      },
+      "source": [
+        "#read the target data"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "target_data=read_data(\"train-target.txt\")"
-      ],
+      "execution_count": 7,
       "metadata": {
         "id": "NFQctcZbvkEL"
       },
-      "execution_count": 7,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "target_data=read_data(\"train-target.txt\")"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "#find the maximum sequence in target data\n"
-      ],
       "metadata": {
         "id": "rL_hBoDvfYZl"
-      }
+      },
+      "source": [
+        "#find the maximum sequence in target data\n"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "max_value_target_data=find_max_len(target_data)"
-      ],
+      "execution_count": 8,
       "metadata": {
         "id": "7a4BRjIZNh1-"
       },
-      "execution_count": 8,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "max_value_target_data=find_max_len(target_data)"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "max_value_target_data"
-      ],
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -216,34 +200,34 @@
         "id": "JXTPUichNa0U",
         "outputId": "8833a4a5-fbaf-41b2-95bb-4355e56efec0"
       },
-      "execution_count": 10,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "223"
             ]
           },
+          "execution_count": 10,
           "metadata": {},
-          "execution_count": 10
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "max_value_target_data"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "#Length of the source data and taget data"
-      ],
       "metadata": {
         "id": "wryZP_hEfiVl"
-      }
+      },
+      "source": [
+        "#Length of the source data and taget data"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "len(source_data)"
-      ],
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -251,25 +235,25 @@
         "id": "tA_OV_4LKfN-",
         "outputId": "56035c4e-b03d-4ec0-b67a-bd83aac2c88b"
       },
-      "execution_count": 9,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "45171"
             ]
           },
+          "execution_count": 9,
           "metadata": {},
-          "execution_count": 9
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "len(source_data)"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "len(target_data)"
-      ],
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -277,31 +261,38 @@
         "id": "r9uNDAEGMzz-",
         "outputId": "54c4e27c-2907-4fca-98d3-0aa90823e8a3"
       },
-      "execution_count": 11,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "45171"
             ]
           },
+          "execution_count": 11,
           "metadata": {},
-          "execution_count": 11
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "len(target_data)"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "#total number of unique words in thedataset"
-      ],
       "metadata": {
         "id": "c473edaCfo0O"
-      }
+      },
+      "source": [
+        "#total number of unique words in thedataset"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 12,
+      "metadata": {
+        "id": "J_Tj5GjEM1oX"
+      },
+      "outputs": [],
       "source": [
         "def total_words(data):\n",
         "  all_source_data_words=set()\n",
@@ -310,58 +301,58 @@
         "      if word not in all_source_data_words:\n",
         "        all_source_data_words.add(word)\n",
         "  return all_source_data_words\n"
-      ],
-      "metadata": {
-        "id": "J_Tj5GjEM1oX"
-      },
-      "execution_count": 12,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "source_data_words=sorted(list(total_words(source_data)))"
-      ],
+      "execution_count": 21,
       "metadata": {
         "id": "mK49s4-sTSNu"
       },
-      "execution_count": 21,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "source_data_words=sorted(list(total_words(source_data)))"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "target_data_words=sorted(list(total_words(target_data)))"
-      ],
+      "execution_count": 22,
       "metadata": {
         "id": "0uUysgkPTZg9"
       },
-      "execution_count": 22,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "target_data_words=sorted(list(total_words(target_data)))"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "#initalise the variables"
-      ],
       "metadata": {
         "id": "eCg8Gw-wfuo_"
-      }
+      },
+      "source": [
+        "#initalise the variables"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "length_encoder_tokens=len(source_data_words)\n",
-        "length_decoder_tokens=len(target_data_words)"
-      ],
+      "execution_count": 25,
       "metadata": {
         "id": "GJ9zaxacTfUt"
       },
-      "execution_count": 25,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "length_encoder_tokens=len(source_data_words)\n",
+        "length_decoder_tokens=len(target_data_words)"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "D8tM7FaAgoAJ"
+      },
+      "outputs": [],
       "source": [
         "def encode(grams, raw_data):\n",
         "    chars = sorted(list(set(raw_data)))\n",
@@ -374,35 +365,35 @@
         "        # store\n",
         "        sequences.append(encoded_seq)\n",
         "    return sequences, mapping"
-      ],
-      "metadata": {
-        "id": "D8tM7FaAgoAJ"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "encode()"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "AnaqXhqAgplY"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "encode()"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "#Encoder model definition"
-      ],
       "metadata": {
         "id": "-mO75Uvqf1M_"
-      }
+      },
+      "source": [
+        "#Encoder model definition"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "dixehIytTlte"
+      },
+      "outputs": [],
       "source": [
         "model = Sequential()\n",
         "model.add(Embedding(vocab, 20, input_length=2, trainable=True))\n",
@@ -411,21 +402,37 @@
         "model.compile(loss='categorical_crossentropy', metrics=['acc'], optimizer='adam')\n",
         "stop_early = tf.keras.callbacks.EarlyStopping(monitor='val_acc', patience=5)\n",
         "model.fit(x_tr, y_tr, epochs=10, verbose=1, validation_data=(x_val, y_val), callbacks=stop_early, batch_size=250)\n"
-      ],
-      "metadata": {
-        "id": "dixehIytTlte"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "SOha87JCeMpF"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3.10.7 64-bit",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python",
+      "version": "3.10.7"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+      }
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
