--- a/Neural Machine Translation.ipynb
+++ b/Neural Machine Translation.ipynb
@@ -64,6 +64,50 @@
     "    x_tk.fit_on_texts(x)\n",
     "    return x_tk.texts_to_sequences(x), x_tk"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pad(x, length=None):\n",
+    "    if length is None:\n",
+    "        length = max([len(sentence) for sentence in x])\n",
+    "    return pad_sequences(x, maxlen = length, padding = 'post')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def preprocess(x, y):\n",
+    "    preprocess_x, x_tk = tokenize(x)\n",
+    "    preprocess_y, y_tk = tokenize(y)\n",
+    "\n",
+    "    preprocess_x = pad(preprocess_x)\n",
+    "    preprocess_y = pad(preprocess_y)\n",
+    "\n",
+    "    # Keras's sparse_categorical_crossentropy function requires the labels to be in 3 dimensions\n",
+    "    preprocess_y = preprocess_y.reshape(*preprocess_y.shape, 1)\n",
+    "\n",
+    "    return preprocess_x, preprocess_y, x_tk, y_tk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def logits_to_text(logits, tokenizer):\n",
+    "    index_to_words = {id: word for word, id in tokenizer.word_index.items()}\n",
+    "    index_to_words[0] = ''\n",
+    "\n",
+    "    return ' '.join([index_to_words[prediction] for prediction in np.argmax(logits, 1)])"
+   ]
   }
  ],
  "metadata": {
