Adding simple and embed models

--- a/Neural Machine Translation.ipynb
+++ b/Neural Machine Translation.ipynb
@@ -108,6 +108,52 @@
     "\n",
     "    return ' '.join([index_to_words[prediction] for prediction in np.argmax(logits, 1)])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def simple_model(input_shape, output_sequence_length, english_vocab_size, french_vocab_size):\n",
+    "    # TODO: Build the layers\n",
+    "    learning_rate = 1e-3\n",
+    "    input_seq = Input(input_shape[1:])\n",
+    "    rnn = GRU(64, return_sequences = True)(input_seq)\n",
+    "    logits = TimeDistributed(Dense(french_vocab_size))(rnn)\n",
+    "    model = Model(input_seq, Activation('softmax')(logits))\n",
+    "    model.compile(loss = sparse_categorical_crossentropy, \n",
+    "                 optimizer = Adam(learning_rate), \n",
+    "                 metrics = ['accuracy'])\n",
+    "    \n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def embed_model(input_shape, output_sequence_length, english_vocab_size, french_vocab_size):\n",
+    "    # TODO: Implement\n",
+    "    learning_rate = 1e-3\n",
+    "    rnn = GRU(64, return_sequences=True, activation=\"tanh\")\n",
+    "    \n",
+    "    embedding = Embedding(french_vocab_size, 64, input_length=input_shape[1]) \n",
+    "    logits = TimeDistributed(Dense(french_vocab_size, activation=\"softmax\"))\n",
+    "    \n",
+    "    model = Sequential()\n",
+    "    #em can only be used in first layer --> Keras Documentation\n",
+    "    model.add(embedding)\n",
+    "    model.add(rnn)\n",
+    "    model.add(logits)\n",
+    "    model.compile(loss=sparse_categorical_crossentropy,\n",
+    "                  optimizer=Adam(learning_rate),\n",
+    "                  metrics=['accuracy'])\n",
+    "    \n",
+    "    return model"
+   ]
   }
  ],
  "metadata": {
