Adding bd model, encoder decoder model and final

--- a/Neural Machine Translation.ipynb
+++ b/Neural Machine Translation.ipynb
@@ -154,6 +154,69 @@
     "    \n",
     "    return model"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def bd_model(input_shape, output_sequence_length, english_vocab_size, french_vocab_size):\n",
+    "    # TODO: Implement\n",
+    "    learning_rate = 1e-3\n",
+    "    model = Sequential()\n",
+    "    model.add(Bidirectional(GRU(128, return_sequences = True, dropout = 0.1), \n",
+    "                           input_shape = input_shape[1:]))\n",
+    "    model.add(TimeDistributed(Dense(french_vocab_size, activation = 'softmax')))\n",
+    "    model.compile(loss = sparse_categorical_crossentropy, \n",
+    "                 optimizer = Adam(learning_rate), \n",
+    "                 metrics = ['accuracy'])\n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def encdec_model(input_shape, output_sequence_length, english_vocab_size, french_vocab_size):\n",
+    "    # OPTIONAL: Implement\n",
+    "    learning_rate = 1e-3\n",
+    "    model = Sequential()\n",
+    "    model.add(GRU(128, input_shape = input_shape[1:], return_sequences = False))\n",
+    "    model.add(RepeatVector(output_sequence_length))\n",
+    "    model.add(GRU(128, return_sequences = True))\n",
+    "    model.add(TimeDistributed(Dense(french_vocab_size, activation = 'softmax')))\n",
+    "    \n",
+    "    model.compile(loss = sparse_categorical_crossentropy, \n",
+    "                 optimizer = Adam(learning_rate), \n",
+    "                 metrics = ['accuracy'])\n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def model_final(input_shape, output_sequence_length, english_vocab_size, french_vocab_size):\n",
+    "    model = Sequential()\n",
+    "    model.add(Embedding(input_dim=english_vocab_size,output_dim=128,input_length=input_shape[1]))\n",
+    "    model.add(Bidirectional(GRU(256,return_sequences=False)))\n",
+    "    model.add(RepeatVector(output_sequence_length))\n",
+    "    model.add(Bidirectional(GRU(256,return_sequences=True)))\n",
+    "    model.add(TimeDistributed(Dense(french_vocab_size,activation='softmax')))\n",
+    "    learning_rate = 0.005\n",
+    "    \n",
+    "    model.compile(loss = sparse_categorical_crossentropy, \n",
+    "                 optimizer = Adam(learning_rate), \n",
+    "                 metrics = ['accuracy'])\n",
+    "    \n",
+    "    return model"
+   ]
   }
  ],
  "metadata": {
