--- a/Neural_Machine_Translation.ipynb
+++ b/Neural_Machine_Translation.ipynb
@@ -57,6 +57,8 @@
       },
       "outputs": [],
       "source": [
+        "# source: https://towardsdatascience.com/neural-machine-translation-with-python-c2f0a34f7dd\n",
+        "\n",
         "def read_data(file_name):\n",
         "  data=[]\n",
         "  with open(file_name, encoding='utf8') as f:\n",
@@ -116,6 +118,8 @@
       },
       "outputs": [],
       "source": [
+        "# source: https://towardsdatascience.com/neural-machine-translation-with-python-c2f0a34f7dd\n",
+        "\n",
         "def tokenize(x):\n",
         "    x_tk = Tokenizer(char_level = False)\n",
         "    x_tk.fit_on_texts(x)\n",
@@ -130,6 +134,8 @@
       },
       "outputs": [],
       "source": [
+        "# source: https://towardsdatascience.com/neural-machine-translation-with-python-c2f0a34f7dd\n",
+        "\n",
         "def pad(x, length=None):\n",
         "    if length is None:\n",
         "        length = max([len(sentence) for sentence in x])\n",
@@ -144,6 +150,8 @@
       },
       "outputs": [],
       "source": [
+        "# source: https://towardsdatascience.com/neural-machine-translation-with-python-c2f0a34f7dd\n",
+        "\n",
         "def preprocess(x, y):\n",
         "    preprocess_x, x_tk = tokenize(x)\n",
         "    preprocess_y, y_tk = tokenize(y)\n",
@@ -165,6 +173,8 @@
       },
       "outputs": [],
       "source": [
+        "# source: https://towardsdatascience.com/neural-machine-translation-with-python-c2f0a34f7dd\n",
+        "\n",
         "preproc_source, preproc_target, source_tokenizer, target_tokenizer =\\\n",
         "    preprocess(source, target)\n",
         "    \n",
@@ -188,6 +198,8 @@
       },
       "outputs": [],
       "source": [
+        "# source: https://towardsdatascience.com/neural-machine-translation-with-python-c2f0a34f7dd\n",
+        "\n",
         "def logits_to_text(logits, tokenizer):\n",
         "    index_to_words = {id: word for word, id in tokenizer.word_index.items()}\n",
         "    index_to_words[0] = ''\n",
@@ -203,8 +215,9 @@
       },
       "outputs": [],
       "source": [
+        "# source: https://towardsdatascience.com/neural-machine-translation-with-python-c2f0a34f7dd\n",
+        "\n",
         "def simple_model(input_shape, output_sequence_length, english_vocab_size, french_vocab_size):\n",
-        "    # TODO: Build the layers\n",
         "    learning_rate = 1e-3\n",
         "    input_seq = Input(input_shape[1:])\n",
         "    rnn = GRU(64, return_sequences = True)(input_seq)\n",
@@ -238,6 +251,8 @@
         }
       ],
       "source": [
+        "# source: https://towardsdatascience.com/neural-machine-translation-with-python-c2f0a34f7dd\n",
+        "\n",
         "# Train RNN\n",
         "tmp_x = pad(preproc_source, max_target_length)\n",
         "tmp_x = tmp_x.reshape((-1, preproc_target.shape[-2], 1))\n",
@@ -262,8 +277,9 @@
       },
       "outputs": [],
       "source": [
+        "# source: https://towardsdatascience.com/neural-machine-translation-with-python-c2f0a34f7dd\n",
+        "\n",
         "def embed_model(input_shape, output_sequence_length, english_vocab_size, french_vocab_size):\n",
-        "    # TODO: Implement\n",
         "    learning_rate = 1e-3\n",
         "    rnn = GRU(64, return_sequences=True, activation=\"tanh\")\n",
         "    \n",
@@ -290,6 +306,8 @@
       },
       "outputs": [],
       "source": [
+        "# source: https://towardsdatascience.com/neural-machine-translation-with-python-c2f0a34f7dd\n",
+        "\n",
         "def bd_model(input_shape, output_sequence_length, english_vocab_size, french_vocab_size):\n",
         "    learning_rate = 1e-3\n",
         "    model = Sequential()\n",
@@ -310,6 +328,8 @@
       },
       "outputs": [],
       "source": [
+        "# source: https://towardsdatascience.com/neural-machine-translation-with-python-c2f0a34f7dd\n",
+        "\n",
         "tmp_x = pad(preproc_english_sentences, preproc_french_sentences.shape[1])\n",
         "tmp_x = tmp_x.reshape((-1, preproc_french_sentences.shape[-2], 1))\n",
         "bidi_model = bd_model(\n",
@@ -330,6 +350,8 @@
       },
       "outputs": [],
       "source": [
+        "# source: https://towardsdatascience.com/neural-machine-translation-with-python-c2f0a34f7dd\n",
+        "\n",
         "def encdec_model(input_shape, output_sequence_length, english_vocab_size, french_vocab_size):\n",
         "    learning_rate = 1e-3\n",
         "    model = Sequential()\n",
@@ -352,6 +374,8 @@
       },
       "outputs": [],
       "source": [
+        "\n",
+        "# source: https://towardsdatascience.com/neural-machine-translation-with-python-c2f0a34f7dd\n",
         "\n",
         "def model_final(input_shape, output_sequence_length, english_vocab_size, french_vocab_size):\n",
         "    model = Sequential()\n",
