--- a/Anything_v3.ipynb
+++ b/Anything_v3.ipynb
@@ -11,6 +11,9 @@
         "import collections\n",
         "import helper\n",
         "import numpy as np\n",
+        "import keras\n",
+        "import tensorflow as tf\n",
+        "import keras\n",
         "from keras.preprocessing.text import Tokenizer\n",
         "from keras_preprocessing.sequence import pad_sequences\n",
         "from keras.models import Model\n",
@@ -18,14 +21,23 @@
         "from keras.layers import Embedding\n",
         "from keras.optimizers import Adam\n",
         "from keras.losses import sparse_categorical_crossentropy\n",
-        "from tqdm import tqdm"
+        "from keras.models import Sequential\n",
+        "import pickle\n",
+        "from tensorflow.keras.models import Sequential\n",
+        "from tensorflow.keras.layers import Bidirectional, Conv1D, MaxPool1D, Dense, Flatten, Dropout, AveragePooling2D, LSTM, TimeDistributed, Attention\n",
+        "import matplotlib.pyplot as plt\n",
+        "import pandas as pd\n",
+        "import random\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from keras import models, layers\n",
+        "from keras import backend\n",
+        "from sklearn.metrics import f1_score,recall_score,precision_score, confusion_matrix\n",
+        "from keras_self_attention import SeqSelfAttention"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "pip install keras-self-attention"
-      ],
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -33,11 +45,10 @@
         "id": "CZMX6Xm7Bdek",
         "outputId": "174448ff-bfc6-4504-c008-48f1071bf043"
       },
-      "execution_count": 3,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Collecting keras-self-attention\n",
@@ -52,58 +63,34 @@
             "Successfully installed keras-self-attention-0.51.0\n"
           ]
         }
+      ],
+      "source": [
+        "pip install keras-self-attention"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "import pickle\n",
-        "import numpy as np\n",
-        "import tensorflow as tf\n",
-        "from tensorflow.keras.models import Sequential\n",
-        "from tensorflow.keras.layers import Bidirectional, Conv1D, MaxPool1D, Dense, Flatten, Dropout, AveragePooling2D, LSTM, TimeDistributed, Attention\n",
-        "import matplotlib.pyplot as plt\n",
-        "import pandas as pd\n",
-        "import random\n",
-        "from sklearn.model_selection import train_test_split\n",
-        "import keras\n",
-        "from keras import models, layers\n",
-        "from keras import backend\n",
-        "from sklearn.metrics import f1_score,recall_score,precision_score, confusion_matrix\n",
-        "import keras\n",
-        "from keras_self_attention import SeqSelfAttention\n",
-        "import collections\n",
-        "import numpy as np\n",
-        "from tqdm import tqdm\n",
-        "from keras.preprocessing.text import Tokenizer\n",
-        "from keras_preprocessing.sequence import pad_sequences\n",
-        "from keras.models import Model\n",
-        "from keras.layers import GRU, Input, Dense, TimeDistributed, Activation, RepeatVector, Bidirectional\n",
-        "from keras.layers import Embedding\n",
-        "from keras.optimizers import Adam\n",
-        "from keras.losses import sparse_categorical_crossentropy\n",
-        "from keras.models import Sequential"
-      ],
+      "execution_count": 4,
       "metadata": {
         "id": "B1eduBjkBRJw"
       },
-      "execution_count": 4,
-      "outputs": []
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "code",
       "execution_count": 5,
       "metadata": {
-        "id": "ARq3Hlw6c3a7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "ARq3Hlw6c3a7",
         "outputId": "1b853d91-76e5-4d3a-f1d3-4723ffe8de09"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Mounted at /content/drive\n",
             "/content/drive/MyDrive/SLU Semesters/SLU 3rd Semester/NLP/Fifth Competition\n",
@@ -145,6 +132,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 7,
+      "metadata": {
+        "id": "G37itZVo-zRi"
+      },
+      "outputs": [],
       "source": [
         "# def read_data(file_name):\n",
         "#     all_data = []\n",
@@ -168,15 +160,15 @@
         "#             cur_sent.append(line.lower())\n",
         "\n",
         "#     return all_data"
-      ],
-      "metadata": {
-        "id": "G37itZVo-zRi"
-      },
-      "execution_count": 7,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 8,
+      "metadata": {
+        "id": "xxjx_t4yfV0y"
+      },
+      "outputs": [],
       "source": [
         "def read_data(file_name):\n",
         "    output = []\n",
@@ -197,12 +189,7 @@
         "            cur_sent.append(current.lower())\n",
         "\n",
         "    return output"
-      ],
-      "metadata": {
-        "id": "xxjx_t4yfV0y"
-      },
-      "execution_count": 8,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
@@ -216,8 +203,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Anything-v3.ipynb  Neural_Machine_Translation.ipynb  \u001b[0m\u001b[01;34mtrain-05\u001b[0m/\n",
             "\u001b[01;34mmodels\u001b[0m/            \u001b[01;34mtest-05\u001b[0m/\n"
@@ -282,6 +269,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 13,
+      "metadata": {
+        "id": "Js_uhC6dU4uz"
+      },
+      "outputs": [],
       "source": [
         "# source: https://towardsdatascience.com/neural-machine-translation-with-python-c2f0a34f7dd\n",
         "def logits_to_text(logits, tokenizer):\n",
@@ -289,15 +281,15 @@
         "    index_to_words[0] = ''\n",
         "\n",
         "    return ' '.join([index_to_words[prediction] for prediction in np.argmax(logits, 1)])"
-      ],
-      "metadata": {
-        "id": "Js_uhC6dU4uz"
-      },
-      "execution_count": 13,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 14,
+      "metadata": {
+        "id": "6XO6qxbyVCsh"
+      },
+      "outputs": [],
       "source": [
         "# source: https://towardsdatascience.com/neural-machine-translation-with-python-c2f0a34f7dd\n",
         "\n",
@@ -311,15 +303,30 @@
         "                 optimizer = Adam(learning_rate), \n",
         "                 metrics = ['accuracy'])\n",
         "    return model"
-      ],
-      "metadata": {
-        "id": "6XO6qxbyVCsh"
-      },
-      "execution_count": 14,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 15,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ew5gjNRvUv9O",
+        "outputId": "a771ec2a-656a-42f9-cec3-740b1003db8a"
+      },
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "1000"
+            ]
+          },
+          "execution_count": 15,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "source_train = read_data('train-05/train-source.txt')\n",
         "target_train = read_data('train-05/train-target.txt')\n",
@@ -328,30 +335,31 @@
         "target = read_data('test-05/test-target.txt')\n",
         "\n",
         "len(source)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "ew5gjNRvUv9O",
-        "outputId": "a771ec2a-656a-42f9-cec3-740b1003db8a"
-      },
-      "execution_count": 15,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "1000"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 15
-        }
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 16,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Wr69J4FQXZXV",
+        "outputId": "69b46128-6f1d-4c5f-a369-c84875a553e9"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Data Preprocessed\n",
+            "Max source sentence length: 231\n",
+            "Max target sentence length: 221\n",
+            "Source vocabulary size: 31035\n",
+            "Target vocabulary size: 25735\n"
+          ]
+        }
+      ],
       "source": [
         "# source: https://towardsdatascience.com/neural-machine-translation-with-python-c2f0a34f7dd\n",
         "\n",
@@ -370,43 +378,22 @@
         "print(\"Max target sentence length:\", max_target_train_length)\n",
         "print(\"Source vocabulary size:\", source_train_vocab_size)\n",
         "print(\"Target vocabulary size:\", target_train_vocab_size)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Wr69J4FQXZXV",
-        "outputId": "69b46128-6f1d-4c5f-a369-c84875a553e9"
-      },
-      "execution_count": 16,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Data Preprocessed\n",
-            "Max source sentence length: 231\n",
-            "Max target sentence length: 221\n",
-            "Source vocabulary size: 31035\n",
-            "Target vocabulary size: 25735\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
       "execution_count": 17,
       "metadata": {
-        "id": "Zeho1L-kkVBc",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "Zeho1L-kkVBc",
         "outputId": "08f2896b-67d4-4ca8-9acc-732c8764965d"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Data Preprocessed\n",
             "Max source sentence length: 97\n",
@@ -438,9 +425,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "max_target_length"
-      ],
+      "execution_count": 18,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -448,32 +433,34 @@
         "id": "snJi20iBYKhY",
         "outputId": "62b5edea-5621-49e2-c32f-421d36af4f03"
       },
-      "execution_count": 18,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "92"
             ]
           },
+          "execution_count": 18,
           "metadata": {},
-          "execution_count": 18
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "max_target_length"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 19,
+      "metadata": {
+        "id": "LVBzJguC2IEu"
+      },
+      "outputs": [],
       "source": [
         "#########\n",
         "tmp_x = pad(preproc_source, max_target_train_length)\n",
         "tmp_x = tmp_x.reshape((-1, preproc_target_train.shape[-2], 1))"
-      ],
-      "metadata": {
-        "id": "LVBzJguC2IEu"
-      },
-      "execution_count": 19,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
@@ -503,33 +490,31 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "# bidi_model.save('./models/bidire_model.h5')"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "acBrCgzOnE-E"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# bidi_model.save('./models/bidire_model.h5')"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 21,
+      "metadata": {
+        "id": "7P9Rkg0TSuV-"
+      },
+      "outputs": [],
       "source": [
         "from keras.models import load_model\n",
         "\n",
         "loaded_bid = load_model(\"./models/bidire_model.h5\")"
-      ],
-      "metadata": {
-        "id": "7P9Rkg0TSuV-"
-      },
-      "execution_count": 21,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "predictions = loaded_bid.predict(tmp_x[:1])[0]"
-      ],
+      "execution_count": 22,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -537,96 +522,100 @@
         "id": "ZbgIYB40TVC9",
         "outputId": "7e9130b4-844b-4ec2-93b5-4dfeb1e273a9"
       },
-      "execution_count": 22,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "1/1 [==============================] - 7s 7s/step\n"
           ]
         }
+      ],
+      "source": [
+        "predictions = loaded_bid.predict(tmp_x[:1])[0]"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 23,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 53
+        },
+        "id": "5Du-lKwfbVjS",
+        "outputId": "4ade139c-add3-4d38-a8ab-9653471115aa"
+      },
+      "outputs": [
+        {
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'bhí an an . an . . . . . . . . . . . . . a a                                                                                                                                                                                                         '"
+            ]
+          },
+          "execution_count": 23,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "real = (tmp_x[:1])[0]\n",
         "real = logits_to_text(predictions, source_tokenizer)\n",
         "real"
-      ],
-      "metadata": {
-        "id": "5Du-lKwfbVjS",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 53
-        },
-        "outputId": "4ade139c-add3-4d38-a8ab-9653471115aa"
-      },
-      "execution_count": 23,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "'bhí an an . an . . . . . . . . . . . . . a a                                                                                                                                                                                                         '"
-            ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            }
-          },
-          "metadata": {},
-          "execution_count": 23
-        }
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 24,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 53
+        },
+        "id": "hHSCNd_KZzlA",
+        "outputId": "0f1b0e24-afbf-4547-a8cb-f6616cd68cf7"
+      },
+      "outputs": [
+        {
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'bhí an an . an . . . . . . . . . . . . . a a                                                                                                                                                                                                         '"
+            ]
+          },
+          "execution_count": 24,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "final_words = logits_to_text(predictions, target_tokenizer)\n",
         "(final_words)"
-      ],
-      "metadata": {
-        "id": "hHSCNd_KZzlA",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 53
-        },
-        "outputId": "0f1b0e24-afbf-4547-a8cb-f6616cd68cf7"
-      },
-      "execution_count": 24,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "'bhí an an . an . . . . . . . . . . . . . a a                                                                                                                                                                                                         '"
-            ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            }
-          },
-          "metadata": {},
-          "execution_count": 24
-        }
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "source[0]"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "22hfvIw4aQ1n"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "source[0]"
+      ]
     }
   ],
   "metadata": {
+    "accelerator": "GPU",
     "colab": {
       "provenance": []
     },
+    "gpuClass": "standard",
     "kernelspec": {
       "display_name": "Python 3.10.7 64-bit",
       "language": "python",
@@ -640,9 +629,7 @@
       "interpreter": {
         "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
       }
-    },
-    "accelerator": "GPU",
-    "gpuClass": "standard"
+    }
   },
   "nbformat": 4,
   "nbformat_minor": 0
